style.css
/*
Theme Name: Powder
Theme URI: https://powder.design/
Author: Brian Gardner
Author URI: https://briangardner.com/
Description: Simple by design, Powder is a base WordPress block theme created for Full Site Editing. Build something for yourself, pair it with a child theme, or launch your client project with it. Whatever you choose to use it for, I hope that you enjoy it.
Requires at least: 6.1
Tested up to: 6.1
Requires PHP: 5.6
Version: 0.6.2
License: GNU General Public License v2 or later
License URI: https://www.gnu.org/licenses/gpl-2.0.html
Text Domain: powder
Tags: block-patterns, block-styles, custom-colors, custom-logo, custom-menu, editor-style, full-site-editing, one-column, template-editing, translation-ready, wide-blocks

Powder WordPress Theme, (C) 2022 Brian Gardner.
Powder is distributed under the terms of the GNU GPL.
*/


/* Defaults
---------------------------------------------------------------------------- */

*,
*::before,
*::after {
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
}

a,
button,
input:focus,
input[type="button"],
input[type="submit"],
textarea:focus,
.wp-element-button {
	transition: all 0.2s ease-in-out;
}

a,
a:focus,
a:hover,
a:not(.wp-element-button) {
	text-decoration-thickness: 1px;
}

b,
strong {
	font-weight: var(--wp--custom--font-weight--medium);
}

blockquote {
	margin: 0;
}

ol,
ul {
	margin: 0;
	padding: 0;
}

ul {
	list-style-type: disc;
}

/* Blocks
---------------------------------------------------------------------------- */

/* Button - Outline
--------------------------------------------- */

.wp-block-button.is-style-outline .wp-element-button {
	background-color: transparent;
	border: 1px solid currentColor;
	color: var(--wp--preset--color--contrast);
	padding: 14px 29px;
}

/* Code
--------------------------------------------- */

.wp-block-code code {
	overflow-wrap: normal;
	overflow-x: scroll;
	padding: 30px;
	tab-size: 4;
	white-space: pre !important;
}

*:not(.wp-block-code) > code {
	background-color: #eee;
	font-size: var(--wp--preset--font-size--small);
	padding: 5px 8px;
}

/* Comments
--------------------------------------------- */

.wp-block-comment-template li {
	margin-left: 0;
}

.wp-block-post-comments-form input:not([type=submit]):not([type=checkbox]),
.wp-block-post-comments-form textarea {
	font-weight: var(--wp--custom--font-weight--light);
	padding: 10px 15px;
}

.wp-block-post-comments-form input:not([type=submit]),
.wp-block-post-comments-form textarea {
	border-color: var(--wp--preset--color--contrast);
}

.wp-block-post-comments-form input[type=submit] {
	width: auto;
}

.wp-block-post-comments-form p {
	margin-bottom: 20px;
}

.wp-block-post-comments-form .form-submit {
	margin-bottom: 0;
}

.wp-block-post-comments-form .comment-form-cookies-consent label {
	font-size: var(--wp--preset--font-size--x-small);
}

/* Group
--------------------------------------------- */

.wp-block-group.is-style-full-height {
	align-items: center;
	display: grid;
	min-height: 100vh;
}

.wp-block-group.is-style-shadow {
	box-shadow: 0 0 50px rgb(0 0 0 / 10%);
}

.wp-block-group.is-style-shadow-solid {
	border: 1px solid var(--wp--preset--color--contrast);
	box-shadow: 5px 5px var(--wp--preset--color--contrast);
}

/* Heading
--------------------------------------------- */

.wp-block-post-content h1 + *,
.wp-block-post-content h2 + *,
.wp-block-post-content h3 + *,
.wp-block-post-content h4 + *,
.wp-block-post-content h5 + *,
.wp-block-post-content h6 + * {
	margin-top: 20px;
}

/* Image
--------------------------------------------- */

.wp-block-image.is-style-shadow img {
	box-shadow: 0 0 50px rgb(0 0 0 / 10%);
}

.wp-block-image.is-style-shadow-solid img {
	border: 1px solid var(--wp--preset--color--contrast);
	box-shadow: 5px 5px var(--wp--preset--color--contrast);
}

/* List
--------------------------------------------- */

ol li:where(:not([class*='block'])),
ul li:where(:not([class*='block'])),
.wp-block-list li {
	margin-left: 30px;
}

.is-style-no-disc li {
	list-style-type: none;
	margin-left: 0;
}

/* Navigation
--------------------------------------------- */

.wp-block-navigation:where(:not([class*=has-text-decoration])) a {
	text-decoration: none;
}

.wp-block-navigation__responsive-container.is-menu-open {
	padding-bottom: 30px;
	padding-top: 30px;
}

.wp-block-navigation__responsive-container-close,
.wp-block-navigation__responsive-container-open {
	border: 1px solid currentColor;
	padding: 2px;
}

/* Navigation Submenu
--------------------------------------------- */

.wp-block-navigation:not(.has-background) .wp-block-navigation__submenu-container {
	padding: 10px;
	min-width: 180px !important;
}

.wp-block-navigation :where(.wp-block-navigation__submenu-container) .wp-block-navigation-item__content {
	padding: 2px 10px;
}

.wp-block-navigation:not(.has-background) .wp-block-navigation__submenu-container {
	border-color: var(--wp--preset--color--contrast);
}

.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__submenu-container {
	padding-left: 10px !important;
	padding-right: 10px !important;
	padding-top: 5px !important;
}

/* Post
--------------------------------------------- */

.wp-block-post:not(:last-of-type) {
	margin-bottom: var(--wp--preset--spacing--medium);
}

/* Preformatted
--------------------------------------------- */

.wp-block-preformatted {
	overflow-wrap: normal;
	overflow-x: scroll;
	white-space: pre;
}

/* Pullquote
--------------------------------------------- */

.wp-block-pullquote p:last-of-type {
	margin-bottom: 0;
}

/* Quote
--------------------------------------------- */

.wp-block-quote p:last-of-type {
	margin-bottom: 0;
}

/* Search
--------------------------------------------- */

.wp-block-search__button {
	margin-left: 0;
}

/* Separator
--------------------------------------------- */

.wp-block-separator.is-style-dots:before {
	font-family: inherit;
	font-size: var(--wp--preset--font-size--large);
	letter-spacing: 10px;
	padding-left: 10px;
}

.wp-block-separator:not(.is-style-wide):not(.is-style-dots) {
	width: 100px;
}

.wp-block-separator:not(.is-style-dots),
.wp-block-separator.has-background:not(.is-style-dots) {
	border-bottom: 1px solid currentColor;
	border-top: none;
	height: 1px;
}

/* Table
--------------------------------------------- */

.wp-block-table.is-style-stripes {
	border-bottom: none;
}

.wp-block-table table {
	border-collapse: collapse;
}

.wp-block-table thead {
	border-bottom: 3px solid var(--wp--preset--color--contrast);
}

.wp-block-table tfoot {
	border-top: 3px solid var(--wp--preset--color--contrast);
}

.wp-block-table td,
.wp-block-table th,
.wp-block-table tr,
.wp-block-table.is-style-stripes td,
.wp-block-table.is-style-stripes th,
.wp-block-table.is-style-stripes tr {
	border: 1px solid var(--wp--preset--color--contrast);
}

.wp-block-table th {
	font-weight: var(--wp--custom--font-weight--medium);
}

.wp-block-table td,
.wp-block-table th {
	padding: 5px;
}

.wp-block-table.is-style-stripes tbody tr:nth-child(odd) {
	background-color: #eee;
}

/* Theme
---------------------------------------------------------------------------- */

/* Forms
--------------------------------------------- */

input,
select,
textarea,
.wp-block-search__input {
	background-color: var(--wp--preset--color--base);
	border: 1px solid var(--wp--preset--color--contrast);
	border-radius: 0;
	color: var(--wp--preset--color--contrast);
	font-family: var(--wp--preset--font-family--outfit);
	font-size: var(--wp--preset--font-size--medium);
	font-weight: var(--wp--custom--font-weight--light);
	line-height: var(--wp--custom--line-height--body);
	padding: 10px 20px;
	width: 100%;
}

input:focus,
textarea:focus {
	background-color: #eee;
	outline: none;
}

input[type="checkbox"],
input[type="image"],
input[type="radio"] {
	width: auto;
}

input[type="button"],
input[type="email"],
input[type="search"],
input[type="submit"],
input[type="text"],
textarea {
	-webkit-appearance: none;
}

::placeholder {
	color: var(--wp--preset--color--contrast);
	font-size: var(--wp--preset--font-size--small);
	opacity: 0.5;
}

/* Media Queries
---------------------------------------------------------------------------- */

@media only screen and (min-width: 800px) {

	/* Navigation Link
	--------------------------------------------- */

	.wp-block-navigation-item.is-style-outline a {
		border: 1px solid currentColor;
		padding: 8px 15px;
	}

	/* Pullquote
	--------------------------------------------- */

	.wp-block-pullquote.alignleft,
	.wp-block-pullquote.alignright {
		max-width: 300px;
	}

	.wp-block-pullquote.alignleft {
		margin-right: 30px !important;
	}

	.wp-block-pullquote.alignright {
		margin-left: 30px !important;
	}

}

